Fixed alignment, roundings etc

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -15,7 +15,7 @@
 .header {
   background-color: var(--header-bg);
   padding: 16px;
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .patterns-heading {
@@ -37,6 +37,12 @@
   padding: 12px 18px;
 }
 
+.reference-sheet,
+.copy-code,
+.swift {
+  border-radius: 14px;
+}
+
 .left-btns {
   display: flex;
   align-items: end;
@@ -47,11 +53,26 @@
   flex-direction: column;
 }
 
+.middle-btns .btns {
+  background: var(--btn-bg-grey);
+  border-radius: 12px;
+}
+
 .middle-btn:nth-of-type(1) {
-  background: var(--btn-bg-white);
   font-weight: 600;
   padding: 12px 18px;
-  border-radius: 6px;
+  color: var(--btn-grey-text);
+}
+
+.middle-btn:nth-of-type(1):focus,
+.middle-btn:nth-of-type(2):focus,
+.middle-btn:nth-of-type(3):focus {
+  box-shadow: none;
+}
+#white_bg {
+  background: var(--btn-bg-white);
+  color: black;
+  border-radius: 12px;
 }
 
 .middle-btn:nth-of-type(2),
@@ -62,6 +83,9 @@
   border-radius: 6px;
   padding: 12px 18px;
 }
+.middle-btn:nth-of-type(2) {
+  border-radius: 0px;
+}
 
 .right-btns {
   display: flex;
@@ -69,15 +93,15 @@
   align-items: end;
 }
 
-#swift {
+.swift {
   background-color: var(--btn-bg-white);
   padding: 12px 80px 12px 10px;
-  border: 1px solid white;
+  border: 2px solid white;
   cursor: pointer;
   margin-right: 18px;
 }
 
-#swift:focus {
+.swift:focus {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
@@ -158,7 +182,7 @@
 .matches_div .btns button {
   border: none;
   background-color: #ffffff;
-  padding: 7px 9px;
+  padding: 2px 8px;
   font-weight: bold;
 }
 
